--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bull": "^3.22.7",
     "cors": "^2.8.5",
     "dateformat": "^4.5.1",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-schedule": "^2.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^4.0.1"
